workloads/ingresses/overlays/flink-demo-rbac/controlcenter-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: controlcenter
  namespace: kafka
  annotations:
    argocd.argoproj.io/sync-wave: "110"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`controlcenter.flink-demo-rbac.confluentdemo.local`)
      kind: Rule
      services:
        - name: controlcenter
          port: 9021
          scheme: http
  tls:
    secretName: controlcenter-tls
